--- a/1.3_NMDS_percentcover.Rmd
+++ b/1.3_NMDS_percentcover.Rmd
@@ -107,7 +107,7 @@ length(unique(abcover_charateristics_load$site_rep))
 str(abcover_charateristics_load)
 sort(unique(abcover_charateristics_load$species))
 
-groups_load <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022/chaparraldegradation_2022/Extracted_Elevation_Slope_Aspect_Hillshade_20m.csv", header = TRUE, na.strings=c("","NA")) 
+groups_load <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022/chaparraldegradation_2022/data/Extracted_Elevation_Slope_Aspect_Hillshade_20m.csv", header = TRUE, na.strings=c("","NA")) 
 
 groups <- groups_load %>% 
   dplyr::select(!c(system.index, ID, aspect, elevation, hillshade, slope, site, fire_history, southwestness, twi, .geo, lat, long)) %>% 
@@ -611,6 +611,7 @@ status_lifecycle_plot
 
 print("wonderful! You're at the end!")
 
+break this code
 ```
 
 # EXTRA CODE BELOW 
